Fix for ProgressBar not showing

--- a/Lolly/css/base.css
+++ b/Lolly/css/base.css
@@ -42,7 +42,7 @@
 }
 
 .imageLoader .shown {
-    display: block;
+    display: block!important;
 }
 
 progress {
